# doom_v2

./: .gitignore  CMakeLists.txt  Makefile  add_perimeter_walls.c  author  base_map.w3d  check_arguments.c  check_event.c  doom-nukem.h  doom_nukem.h  draw_hud.c  draw_sprites.c  draw_text.c  draw_textured_floor.c  draw_textured_wall.c  handle_error.c  handle_map_error.c  height_for_column.c  init_params.c  init_position.c  init_sdl.c  load_sprites_textures.c  main.c  make_calculations.c  map1.doom  mouse_move.c  parse_map.c  process_finish.c  read_map.c  route_events.c  set_wall_color.c  wolf3d.h
libftprintf/libft/: Makefile  ft_strsub_chr.c  libft.h
media/maps/: eye.w3d  labyrinth.w3d  map1.w3d  medium.w3d  one.w3d  plat.w3d  three.w3d
