cmake_minimum_required(VERSION 3.14)
project(doom_actual C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(frameworks)
include_directories(frameworks/SDL2)
include_directories(frameworks/SDL2.framework)
include_directories(frameworks/SDL2.framework/Headers)
include_directories(frameworks/SDL2.framework/Versions)
include_directories(frameworks/SDL2.framework/Versions/A)
include_directories(frameworks/SDL2.framework/Versions/A/Headers)
include_directories(frameworks/SDL2.framework/Versions/Current)
include_directories(frameworks/SDL2.framework/Versions/Current/Headers)
include_directories(libftprintf)
include_directories(libftprintf/libft)

add_executable(doom_actual
        frameworks/SDL2/begin_code.h
        frameworks/SDL2/close_code.h
        frameworks/SDL2/SDL.h
        frameworks/SDL2/SDL_assert.h
        frameworks/SDL2/SDL_atomic.h
        frameworks/SDL2/SDL_audio.h
        frameworks/SDL2/SDL_bits.h
        frameworks/SDL2/SDL_blendmode.h
        frameworks/SDL2/SDL_clipboard.h
        frameworks/SDL2/SDL_config.h
        frameworks/SDL2/SDL_cpuinfo.h
        frameworks/SDL2/SDL_egl.h
        frameworks/SDL2/SDL_endian.h
        frameworks/SDL2/SDL_error.h
        frameworks/SDL2/SDL_events.h
        frameworks/SDL2/SDL_filesystem.h
        frameworks/SDL2/SDL_gamecontroller.h
        frameworks/SDL2/SDL_gesture.h
        frameworks/SDL2/SDL_haptic.h
        frameworks/SDL2/SDL_hints.h
        frameworks/SDL2/SDL_image.h
        frameworks/SDL2/SDL_joystick.h
        frameworks/SDL2/SDL_keyboard.h
        frameworks/SDL2/SDL_keycode.h
        frameworks/SDL2/SDL_loadso.h
        frameworks/SDL2/SDL_log.h
        frameworks/SDL2/SDL_main.h
        frameworks/SDL2/SDL_messagebox.h
        frameworks/SDL2/SDL_mouse.h
        frameworks/SDL2/SDL_mutex.h
        frameworks/SDL2/SDL_name.h
        frameworks/SDL2/SDL_opengl.h
        frameworks/SDL2/SDL_opengl_glext.h
        frameworks/SDL2/SDL_opengles.h
        frameworks/SDL2/SDL_opengles2.h
        frameworks/SDL2/SDL_opengles2_gl2.h
        frameworks/SDL2/SDL_opengles2_gl2ext.h
        frameworks/SDL2/SDL_opengles2_gl2platform.h
        frameworks/SDL2/SDL_opengles2_khrplatform.h
        frameworks/SDL2/SDL_pixels.h
        frameworks/SDL2/SDL_platform.h
        frameworks/SDL2/SDL_power.h
        frameworks/SDL2/SDL_quit.h
        frameworks/SDL2/SDL_rect.h
        frameworks/SDL2/SDL_render.h
        frameworks/SDL2/SDL_revision.h
        frameworks/SDL2/SDL_rwops.h
        frameworks/SDL2/SDL_scancode.h
        frameworks/SDL2/SDL_shape.h
        frameworks/SDL2/SDL_stdinc.h
        frameworks/SDL2/SDL_surface.h
        frameworks/SDL2/SDL_system.h
        frameworks/SDL2/SDL_syswm.h
        frameworks/SDL2/SDL_test.h
        frameworks/SDL2/SDL_test_assert.h
        frameworks/SDL2/SDL_test_common.h
        frameworks/SDL2/SDL_test_compare.h
        frameworks/SDL2/SDL_test_crc32.h
        frameworks/SDL2/SDL_test_font.h
        frameworks/SDL2/SDL_test_fuzzer.h
        frameworks/SDL2/SDL_test_harness.h
        frameworks/SDL2/SDL_test_images.h
        frameworks/SDL2/SDL_test_log.h
        frameworks/SDL2/SDL_test_md5.h
        frameworks/SDL2/SDL_test_random.h
        frameworks/SDL2/SDL_thread.h
        frameworks/SDL2/SDL_timer.h
        frameworks/SDL2/SDL_touch.h
        frameworks/SDL2/SDL_ttf.h
        frameworks/SDL2/SDL_types.h
        frameworks/SDL2/SDL_version.h
        frameworks/SDL2/SDL_video.h
        frameworks/SDL2/SDL_vulkan.h
        frameworks/SDL2.framework/Headers/begin_code.h
        frameworks/SDL2.framework/Headers/close_code.h
        frameworks/SDL2.framework/Headers/SDL.h
        frameworks/SDL2.framework/Headers/SDL_assert.h
        frameworks/SDL2.framework/Headers/SDL_atomic.h
        frameworks/SDL2.framework/Headers/SDL_audio.h
        frameworks/SDL2.framework/Headers/SDL_bits.h
        frameworks/SDL2.framework/Headers/SDL_blendmode.h
        frameworks/SDL2.framework/Headers/SDL_clipboard.h
        frameworks/SDL2.framework/Headers/SDL_config.h
        frameworks/SDL2.framework/Headers/SDL_config_macosx.h
        frameworks/SDL2.framework/Headers/SDL_copying.h
        frameworks/SDL2.framework/Headers/SDL_cpuinfo.h
        frameworks/SDL2.framework/Headers/SDL_endian.h
        frameworks/SDL2.framework/Headers/SDL_error.h
        frameworks/SDL2.framework/Headers/SDL_events.h
        frameworks/SDL2.framework/Headers/SDL_filesystem.h
        frameworks/SDL2.framework/Headers/SDL_gamecontroller.h
        frameworks/SDL2.framework/Headers/SDL_gesture.h
        frameworks/SDL2.framework/Headers/SDL_haptic.h
        frameworks/SDL2.framework/Headers/SDL_hints.h
        frameworks/SDL2.framework/Headers/SDL_joystick.h
        frameworks/SDL2.framework/Headers/SDL_keyboard.h
        frameworks/SDL2.framework/Headers/SDL_keycode.h
        frameworks/SDL2.framework/Headers/SDL_loadso.h
        frameworks/SDL2.framework/Headers/SDL_log.h
        frameworks/SDL2.framework/Headers/SDL_main.h
        frameworks/SDL2.framework/Headers/SDL_messagebox.h
        frameworks/SDL2.framework/Headers/SDL_mouse.h
        frameworks/SDL2.framework/Headers/SDL_mutex.h
        frameworks/SDL2.framework/Headers/SDL_name.h
        frameworks/SDL2.framework/Headers/SDL_opengl.h
        frameworks/SDL2.framework/Headers/SDL_opengl_glext.h
        frameworks/SDL2.framework/Headers/SDL_opengles.h
        frameworks/SDL2.framework/Headers/SDL_opengles2.h
        frameworks/SDL2.framework/Headers/SDL_opengles2_gl2.h
        frameworks/SDL2.framework/Headers/SDL_opengles2_gl2ext.h
        frameworks/SDL2.framework/Headers/SDL_opengles2_gl2platform.h
        frameworks/SDL2.framework/Headers/SDL_opengles2_khrplatform.h
        frameworks/SDL2.framework/Headers/SDL_pixels.h
        frameworks/SDL2.framework/Headers/SDL_platform.h
        frameworks/SDL2.framework/Headers/SDL_power.h
        frameworks/SDL2.framework/Headers/SDL_quit.h
        frameworks/SDL2.framework/Headers/SDL_rect.h
        frameworks/SDL2.framework/Headers/SDL_render.h
        frameworks/SDL2.framework/Headers/SDL_revision.h
        frameworks/SDL2.framework/Headers/SDL_rwops.h
        frameworks/SDL2.framework/Headers/SDL_scancode.h
        frameworks/SDL2.framework/Headers/SDL_shape.h
        frameworks/SDL2.framework/Headers/SDL_stdinc.h
        frameworks/SDL2.framework/Headers/SDL_surface.h
        frameworks/SDL2.framework/Headers/SDL_system.h
        frameworks/SDL2.framework/Headers/SDL_syswm.h
        frameworks/SDL2.framework/Headers/SDL_thread.h
        frameworks/SDL2.framework/Headers/SDL_timer.h
        frameworks/SDL2.framework/Headers/SDL_touch.h
        frameworks/SDL2.framework/Headers/SDL_types.h
        frameworks/SDL2.framework/Headers/SDL_version.h
        frameworks/SDL2.framework/Headers/SDL_video.h
        frameworks/SDL2.framework/Headers/SDL_vulkan.h
        frameworks/SDL2.framework/Versions/A/Headers/begin_code.h
        frameworks/SDL2.framework/Versions/A/Headers/close_code.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_assert.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_atomic.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_audio.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_bits.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_blendmode.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_clipboard.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_config.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_config_macosx.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_copying.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_cpuinfo.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_endian.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_error.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_events.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_filesystem.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_gamecontroller.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_gesture.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_haptic.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_hints.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_joystick.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_keyboard.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_keycode.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_loadso.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_log.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_main.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_messagebox.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_mouse.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_mutex.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_name.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_opengl.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_opengl_glext.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_opengles.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_opengles2.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_opengles2_gl2.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_opengles2_gl2ext.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_opengles2_gl2platform.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_opengles2_khrplatform.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_pixels.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_platform.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_power.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_quit.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_rect.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_render.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_revision.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_rwops.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_scancode.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_shape.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_stdinc.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_surface.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_system.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_syswm.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_thread.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_timer.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_touch.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_types.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_version.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_video.h
        frameworks/SDL2.framework/Versions/A/Headers/SDL_vulkan.h
        frameworks/SDL2.framework/Versions/Current/Headers/begin_code.h
        frameworks/SDL2.framework/Versions/Current/Headers/close_code.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_assert.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_atomic.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_audio.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_bits.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_blendmode.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_clipboard.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_config.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_config_macosx.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_copying.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_cpuinfo.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_endian.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_error.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_events.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_filesystem.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_gamecontroller.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_gesture.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_haptic.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_hints.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_joystick.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_keyboard.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_keycode.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_loadso.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_log.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_main.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_messagebox.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_mouse.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_mutex.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_name.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_opengl.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_opengl_glext.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_opengles.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_opengles2.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_opengles2_gl2.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_opengles2_gl2ext.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_opengles2_gl2platform.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_opengles2_khrplatform.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_pixels.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_platform.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_power.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_quit.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_rect.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_render.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_revision.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_rwops.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_scancode.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_shape.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_stdinc.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_surface.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_system.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_syswm.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_thread.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_timer.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_touch.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_types.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_version.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_video.h
        frameworks/SDL2.framework/Versions/Current/Headers/SDL_vulkan.h
        libftprintf/libft/ft_atoi.c
        libftprintf/libft/ft_bzero.c
        libftprintf/libft/ft_isalnum.c
        libftprintf/libft/ft_isalpha.c
        libftprintf/libft/ft_isascii.c
        libftprintf/libft/ft_isdigit.c
        libftprintf/libft/ft_isprint.c
        libftprintf/libft/ft_itoa.c
        libftprintf/libft/ft_itoa_base_sign.c
        libftprintf/libft/ft_itoa_base_unsign.c
        libftprintf/libft/ft_lstadd.c
        libftprintf/libft/ft_lstdel.c
        libftprintf/libft/ft_lstdelone.c
        libftprintf/libft/ft_lstiter.c
        libftprintf/libft/ft_lstmap.c
        libftprintf/libft/ft_lstnew.c
        libftprintf/libft/ft_memalloc.c
        libftprintf/libft/ft_memccpy.c
        libftprintf/libft/ft_memchr.c
        libftprintf/libft/ft_memcmp.c
        libftprintf/libft/ft_memcpy.c
        libftprintf/libft/ft_memdel.c
        libftprintf/libft/ft_memmove.c
        libftprintf/libft/ft_memset.c
        libftprintf/libft/ft_putchar.c
        libftprintf/libft/ft_putchar_fd.c
        libftprintf/libft/ft_putendl.c
        libftprintf/libft/ft_putendl_fd.c
        libftprintf/libft/ft_putnbr.c
        libftprintf/libft/ft_putnbr_fd.c
        libftprintf/libft/ft_putstr.c
        libftprintf/libft/ft_putstr_fd.c
        libftprintf/libft/ft_sqrt.c
        libftprintf/libft/ft_str_allnum.c
        libftprintf/libft/ft_str_clean_join.c
        libftprintf/libft/ft_strcat.c
        libftprintf/libft/ft_strchr.c
        libftprintf/libft/ft_strclr.c
        libftprintf/libft/ft_strcmp.c
        libftprintf/libft/ft_strcpy.c
        libftprintf/libft/ft_strdel.c
        libftprintf/libft/ft_strdup.c
        libftprintf/libft/ft_strequ.c
        libftprintf/libft/ft_strgsort.c
        libftprintf/libft/ft_striter.c
        libftprintf/libft/ft_striteri.c
        libftprintf/libft/ft_strjoin.c
        libftprintf/libft/ft_strlcat.c
        libftprintf/libft/ft_strlen.c
        libftprintf/libft/ft_strmap.c
        libftprintf/libft/ft_strmapi.c
        libftprintf/libft/ft_strncat.c
        libftprintf/libft/ft_strncmp.c
        libftprintf/libft/ft_strncpy.c
        libftprintf/libft/ft_strnequ.c
        libftprintf/libft/ft_strnew.c
        libftprintf/libft/ft_strnstr.c
        libftprintf/libft/ft_strnsymb.c
        libftprintf/libft/ft_strrchr.c
        libftprintf/libft/ft_strrev.c
        libftprintf/libft/ft_strsplit.c
        libftprintf/libft/ft_strstr.c
        libftprintf/libft/ft_strsub.c
        libftprintf/libft/ft_strsub_chr.c
        libftprintf/libft/ft_strswap.c
        libftprintf/libft/ft_strtrim.c
        libftprintf/libft/ft_swap.c
        libftprintf/libft/ft_tolower.c
        libftprintf/libft/ft_toupper.c
        libftprintf/libft/ft_word_count.c
        libftprintf/libft/get_next_line.c
        libftprintf/libft/libft.h
        libftprintf/ft_apply_flags.c
        libftprintf/ft_flags.c
        libftprintf/ft_get_numbers.c
        libftprintf/ft_get_unichar.c
        libftprintf/ft_get_unistr.c
        libftprintf/ft_get_unsign_ptr_bin.c
        libftprintf/ft_parse_printf.c
        libftprintf/ft_prec_for_nonstring.c
        libftprintf/ft_prec_width.c
        libftprintf/ft_printf.c
        libftprintf/ft_printf_fd.c
        libftprintf/ft_sharp_octal_hexa.c
        libftprintf/ft_typical_or_unicode_arg.c
        libftprintf/ft_zero_nonptr.c
        libftprintf/libftprintf.h
        add_perimeter_walls.c
        check_arguments.c
        check_event.c
        handle_error.c
        handle_map_error.c
        height_for_column.c
        init_params.c
        init_position.c
        init_sdl.c
        main.c
        make_calculations.c
        parse_map.c
        read_map.c
        route_events.c
        set_wall_color.c
        wolf3d.h mouse_move.c draw_sprites.c draw_textured_wall.c draw_textured_floor.c)